--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "oacodeclub.github.io",
   "homepage": "https://oacodeclub.github.io",
   "version": "0.1.0",
+  "description": "This is a testing app for my test",
   "private": true,
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -20,12 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+        "start": "node src/index.js",
+        "error": "error: no site specified"
   },
   "eslintConfig": {
     "extends": [
@@ -33,19 +31,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "eslint": "^8.39.0"
   }
+}
+    "author": "Lil Gamer Playz - Erick Tran",
+    "license": "MIT"
+    }
 }
